add animations + improve end game

--- a/front-nim/src/Match.module.css
+++ b/front-nim/src/Match.module.css
@@ -2,9 +2,60 @@
 .match{
    
     width:70px;
+    height: 150px;
+    background-image: url('./m1.png');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 .hidden{
     visibility: hidden;
+}
+@keyframes bgSlides {
+    0% {
+          background-image: url("./m1.png");
+          visibility: visible;
+          
+    }
+    20% {
+          background-image: url("./m2.png");
+          
+    }
+    
+    35% {
+      background-image: url("./m3.png");
+      
+    }
+    
+    55% {
+      background-image: url("./m4.png");
+      
+    }
+    
+    65% {
+      background-image: url("./m5.png");
+      
+    }
+    80% {
+      background-image: url("./m6.png");
+      
+    }
+    100%{
+        
+    }
+}
+@keyframes undisplay{
+	from{opacity:1};
+	
+	to{opacity:0};
+}
+.start{
+    width:70px;
+    height: 150px;
+    background-image: url('./m6.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    visibility: hidden;
+    animation: bgSlides 1s  ease-in;
 }
 .match-select{
     margin-bottom: 5rem;
