--- a/front-nim/src/css/Match.module.css
+++ b/front-nim/src/css/Match.module.css
@@ -66,3 +66,15 @@
     cursor: pointer;
   
 }
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .match, .start{
+   
+    width:40px;
+    height: 80px;
+  
+}
+.match:hover{
+  width:50px;
+}
+}
