--- a/front-nim/src/css/Game.module.css
+++ b/front-nim/src/css/Game.module.css
@@ -15,6 +15,16 @@
   margin:1em;
   border-radius: 5px;
 }
+.volumeContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.volumeText{
+  font-size: smaller;
+  align-content: center;
+  color: rgb(163, 155, 155);
+}
 .adv{
   display: inline;
   font-size: smaller;
